--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/security
+spring.datasource.url=jdbc:mysql://localhost:3306/crud
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.show-sql=true
