--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.port=8080
 spring.main.allow-circular-references=true
-
+spring.servlet.multipart.max-file-size = -1
+spring.servlet.multipart.max-request-size = -1
 
